go/k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unkey
  labels:
    app.kubernetes.io/name: unkey
    app.kubernetes.io/instance: dev
