go/k8s/manifests/agent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: unkey
  labels:
    app: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
        - name: agent
          image: unkey-agent:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
            - containerPort: 9095
          command: ["/usr/local/bin/unkey", "agent", "--config", "config.docker.json"]
---
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: unkey
  labels:
    app: agent
spec:
  selector:
    app: agent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: rpc
      port: 9095
      targetPort: 9095
      protocol: TCP
  type: ClusterIP
