go/k8s/manifests/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: unkey
  labels:
    app: dashboard
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dashboard
    template:
        metadata:
            labels:
                app: dashboard
        spec:
            containers:
                - name: dashboard
                  image: unkey/dashboard:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 10
                      periodSeconds: 5
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 30
                      periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: unkey
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
